cabal-version:      3.0
name:               get-password

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:
    A wrapper around the LastPass CLI to quickly search for passwords.
homepage:           https://github.com/tomphp/get-password
license:            BSD-2-Clause
license-file:       LICENSE
author:             Tom Oram
maintainer:         me@tomoram.io
category:           Tool
build-type:         Simple
extra-doc-files:
    README.md,
    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        GetPassword,
        LastPass,
        PasswordEntry,
        EntryListParser
    build-depends:
        base ^>=4.16.4.0,
        megaparsec,
        mtl,
        process-extras,
        text
    hs-source-dirs:   src
    default-language: GHC2021

executable get-password
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        get-password,
        mtl
    hs-source-dirs:   app
    default-language: GHC2021

test-suite get-password-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Spec.hs
    other-modules:
        LastPassMock,
        GetPasswordSpec,
        EntryListParserSpec
    build-depends:
        base ^>=4.16.4.0,
        get-password,
        hspec,
        mtl
