cabal-version:      3.0
name:               get-password

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:
    A wrapper around the LastPass CLI to quickly search for passwords.
homepage:           https://github.com/tomphp/get-password
license:            BSD-2-Clause
license-file:       LICENSE
author:             Tom Oram
maintainer:         me@tomoram.io
category:           Tool
build-type:         Simple
extra-doc-files:
    README.md,
    CHANGELOG.md

common warnings
    ghc-options: -Wall

common dependancies
    default-extensions:
        DisambiguateRecordFields,
        OverloadedStrings,
        RecordWildCards
    build-depends:
        base ^>= 4.16.4.0,
        text

library
    import:           warnings, dependancies
    exposed-modules:
        Config,
        GetPassword,
        LastPass,
        LastPass.Class,
        LastPass.Cli,
        LastPass.Entry,
        LastPass.EntryListParser,
        LastPass.Error,
        LastPass.LastPass
    build-depends:
        directory,
        filepath,
        megaparsec,
        mtl ^>= 2.3.1,
        process,
        process-extras,
        yaml
    hs-source-dirs:   src
    default-language: GHC2021

executable get-password
    import:           warnings, dependancies
    main-is:          Main.hs
    build-depends:
        get-password,
        mtl
    hs-source-dirs:   app
    default-language: GHC2021

test-suite get-password-test
    import:           warnings, dependancies
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Spec.hs
    other-modules:
        ConfigSpec,
        GetPasswordSpec,
        LastPass.EntryListParserSpec,
        LastPass.EntrySpec,
        LastPassMock
    build-depends:
        directory,
        get-password,
        hspec,
        mtl,

        yaml
